--- a/NestNet.Cli/NestNet.Cli/Properties/launchSettings.json
+++ b/NestNet.Cli/NestNet.Cli/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "NestNet.Cli": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "workingDirectory": "C:\\GlobalE\\nestnet\\NestNet.Sample\\SampleApp"
     }
   }
 }
