--- a/NestNet.Cli/NestNet.Cli/Properties/launchSettings.json
+++ b/NestNet.Cli/NestNet.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NestNet.Cli": {
       "commandName": "Project",
-      "workingDirectory": "C:\\GlobalE\\ChargeBackPoc\\ChargeBack"
+      "workingDirectory": "C:\\GlobalE\\nestnet\\NestNet.Sample\\SampleApp"
     }
   }
 }
