--- a/NestNet.Sample/SampleApp/SampleApp.Api/Properties/launchSettings.json
+++ b/NestNet.Sample/SampleApp/SampleApp.Api/Properties/launchSettings.json
@@ -4,9 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5180",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,9 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7218;http://localhost:5180",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:7030;http://localhost:5200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
