--- a/NestNet.Sample/SampleApp/SampleApp.Api/SampleApp.Api.csproj
+++ b/NestNet.Sample/SampleApp/SampleApp.Api/SampleApp.Api.csproj
@@ -7,10 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="Modules\MyModule\Tests\**" />
-      <Content Remove="Modules\MyModule\Tests\**" />
-      <EmbeddedResource Remove="Modules\MyModule\Tests\**" />
-      <None Remove="Modules\MyModule\Tests\**" />
+      <Compile Remove="Resources\MyResource\Tests\**" />
+      <Content Remove="Resources\MyResource\Tests\**" />
+      <EmbeddedResource Remove="Resources\MyResource\Tests\**" />
+      <None Remove="Resources\MyResource\Tests\**" />
     </ItemGroup>
 
     <ItemGroup>
