--- a/NestNet.Sample/SampleApp/SampleApp.Core/SampleApp.Core.csproj
+++ b/NestNet.Sample/SampleApp/SampleApp.Core/SampleApp.Core.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Modules\MyModule\Tests\**" />
       <Compile Remove="Resources\MyResource\Tests\**" />
+      <EmbeddedResource Remove="Modules\MyModule\Tests\**" />
       <EmbeddedResource Remove="Resources\MyResource\Tests\**" />
+      <None Remove="Modules\MyModule\Tests\**" />
       <None Remove="Resources\MyResource\Tests\**" />
     </ItemGroup>
 
