--- a/NestNet.Sample/SampleApp/SampleApp.Worker/SampleApp.Worker.csproj
+++ b/NestNet.Sample/SampleApp/SampleApp.Worker/SampleApp.Worker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -15,11 +15,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="*" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\NestNet.Infra\NestNet.Infra.csproj" />
         <ProjectReference Include="..\SampleApp.Core\SampleApp.Core.csproj" />
     </ItemGroup>
 
