--- a/NestNet.Sample/SampleApp/SampleApp.Api/SampleApp.Api.csproj
+++ b/NestNet.Sample/SampleApp/SampleApp.Api/SampleApp.Api.csproj
@@ -1,14 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="*" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="*">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="*">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
 
         <PackageReference Include="Xunit" Version="*" />
         <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="*" />
@@ -24,7 +31,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\NestNet.Infra\NestNet.Infra.csproj" />
+        <ProjectReference Include="..\..\..\NestNet.Infra\NestNet.Infra.csproj" />
+        <ProjectReference Include="..\SampleApp.Core\SampleApp.Core.csproj" />
     </ItemGroup>
 
 </Project>
