--- a/GlobalE.Payments.Manager/GlobalE.Payments.Manager.Core/GlobalE.Payments.Manager.Core.csproj
+++ b/GlobalE.Payments.Manager/GlobalE.Payments.Manager.Core/GlobalE.Payments.Manager.Core.csproj
@@ -1,21 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="*">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="*">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="*" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="*" />
 
         <PackageReference Include="Xunit" Version="*" />
         <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="*" />
@@ -31,8 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\NestNet.Infra\NestNet.Infra.csproj" />
-        <ProjectReference Include="..\SampleApp.Core\SampleApp.Core.csproj" />
+      <ProjectReference Include="..\..\NestNet.Infra\NestNet.Infra.csproj" />
     </ItemGroup>
 
 </Project>
